feat: add legal views and metadata generation for terms and privacy policy pages

--- a/src/lib/features/legal/views/terms/terms.view.mdx
+++ b/src/lib/features/legal/views/terms/terms.view.mdx
@@ -1,4 +1,5 @@
-import { repoMetadata, siteMetadata } from '$lib/configs/site';
+import { repoMetadata } from '$lib/configs/repo';
+import { siteMetadata } from '$lib/configs/site';
 
 # Terms of Use
 
