--- a/src/lib/features/legal/views/privacy-policy/privacy-policy.view.mdx
+++ b/src/lib/features/legal/views/privacy-policy/privacy-policy.view.mdx
@@ -1,4 +1,5 @@
-import { repoMetadata, siteMetadata } from '$lib/configs/site';
+import { repoMetadata } from '$lib/configs/repo';
+import { siteMetadata } from '$lib/configs/site';
 
 # Privacy Policy
 
